# panda-rs

./: .gitignore  Cargo.toml  README.md  record_example_replay.py  run_example.sh
.github/workflows/: rust.yml
panda-macros/: Cargo.toml
panda-macros/src/: base_callbacks.rs  guest_type.rs  hooks2.rs  lib.rs  osi_static.rs  osi_type.rs  panda_args.rs  syscalls.rs
panda-macros/src/guest_type/: struct_impl.rs
panda-macros/src/syscalls/: aarch64.rs  arm.rs  i386.rs  mips.rs  mipsel.rs  x86_64.rs
panda-rs/: Cargo.toml  record_example_replay.py
panda-rs-example/: Cargo.toml
panda-rs-example/src/: lib.rs
panda-rs/examples/: closures.rs  custom_plugin_import.rs  dump_regs.rs  guest_ptr.rs  hooks.rs  osi.rs  ppp_callback_export.rs  showcase.rs  syscall_injection.rs  unicorn.rs  unicorn_aarch64.rs  unicorn_taint.rs
panda-rs/src/: abi.rs  arch.rs  callbacks.rs  enums.rs  error.rs  guest_ptr.rs  init_return.rs  lib.rs  library_mode.rs  on_sys.rs  panda_arg.rs  syscall_injection.rs  taint.rs
panda-rs/src/api/: llvm.rs  mem.rs  misc.rs  mod.rs  os.rs  regs.rs  require_plugin.rs  rr.rs  utils.rs
panda-rs/src/callbacks/: closure.rs  export.rs  ppp_closures.rs
panda-rs/src/guest_ptr/: guest_align.rs  impls.rs
panda-rs/src/library_mode/: .mod.rs.swp  mod.rs  qcows.rs
panda-rs/src/plugins/: cosi.rs  glib.rs  guest_plugin_manager.rs  hooks.rs  hooks2.rs  mod.rs  osi.rs  osi2.rs  proc_start_linux.rs  syscalls2.rs
panda-rs/src/plugins/cosi/: osi_statics.rs
panda-rs/src/plugins/guest_plugin_manager/: from_channel_msg.rs  guest_plugin.rs
panda-rs/src/plugins/osi2/: osi_statics.rs
panda-rs/src/syscall_injection/: arch.rs  conversion.rs  pinned_queue.rs  storage_location.rs  syscall_future.rs  syscall_regs.rs  syscalls.rs
panda-sys/: Cargo.toml  README.md  build.rs
panda-sys/src/: bindings.h  bindings.rs  extensions.rs  gen_bindings.sh  lib.rs
panda-sys/src/bindings/: aarch64.rs  arm.rs  i386.rs  mips.rs  mips64.rs  mips64el.rs  mipsel.rs  ppc.rs  x86_64.rs
panda-sys/src/fake_headers/sys/: cachectl.h
syscall-parser/: Cargo.toml  README.md
syscall-parser/src/: main.rs
