[package]
name = "panda-re-macros"
version = "0.3.0"
authors = ["Jordan McLeod <Jordan.McLeod@ll.mit.edu>"]
edition = "2018"
description = "Macros needed for the `panda-re` library"
license = "GPL-2.0"
documentation = "https://docs.rs/panda-re-macros"
homepage = "https://panda-re.mit.edu"

[lib]
name = "panda_macros"
proc-macro = true

[dependencies]
syn = { version = "1.0.37", features = ["full"] }
quote = "1.0.7"
doc-comment = "0.3.3"
darling = "0.10.2"
