[package]
name = "panda-rs-example"
version = "0.1.0"
authors = ["Jordan McLeod <Jordan.McLeod@ll.mit.edu>"]
edition = "2018"

[[bin]]
name = "analyze"
path = "src/lib.rs"
required-features = ["bin"]

[lib]
crate-type = ["cdylib"]

[dependencies]
panda = { path = "../panda-rs" }

[features]
bin = ["panda/libpanda"]
