[package]
name = "panda-re"
version = "0.19.0"
authors = ["Jordan McLeod <Jordan.McLeod@ll.mit.edu>", "tnballo <tnballo@users.noreply.github.com>"]
edition = "2018"
description = "The official library for interfacing with PANDA (Platform for Architecture-Neutral Dynamic Analysis)"
license = "GPL-2.0"
documentation = "https://docs.rs/panda-re"
homepage = "https://panda-re.mit.edu"

[lib]
name = "panda"

[[example]]
name = "showcase"
required-features = ["libpanda"]

[[example]]
name = "dump_regs"
required-features = ["libpanda"]

[[example]]
name = "unicorn"
required-features = ["libpanda"]

[[example]]
name = "unicorn_aarch64"
required-features = ["libpanda", "aarch64"]

[dependencies]
panda-re-sys = { version = "0.7", path = "../panda-sys" }
panda-re-macros = { version = "0.13", path = "../panda-macros" }
inventory = "0.1.8"
dirs = "3.0.1"
lazy_static = "1.4.0"
libloading = "0.6.2"
paste = "1.0.0"
glib-sys = "0.10.0"
strum = "0.20"
strum_macros = "0.20"
thiserror = "1"
once_cell = "1.8.0"
#llvm-ir = { version = "0.7.4", features = ["llvm-10"] }

[features]
libpanda = ["panda-re-sys/libpanda"]
x86_64 = ["panda-re-sys/x86_64", "panda-re-macros/x86_64"]
i386 = ["panda-re-sys/i386", "panda-re-macros/i386"]
arm = ["panda-re-sys/arm", "panda-re-macros/arm"]
aarch64 = ["panda-re-sys/aarch64", "panda-re-macros/aarch64"]
ppc = ["panda-re-sys/ppc", "panda-re-macros/ppc"]
mips = ["panda-re-sys/mips", "panda-re-macros/mips"]
mipsel = ["panda-re-sys/mipsel", "panda-re-macros/mipsel"]
mips64 = ["panda-re-sys/mips64", "panda-re-macros/mips64"]

default = ["x86_64"]
