[package]
name = "panda-re-sys"
version = "0.7.0"
authors = ["Jordan McLeod <Jordan.McLeod@ll.mit.edu>"]
edition = "2018"
description = "The official *-sys library for interfacing with PANDA (Platform for Architecture-Neutral Dynamic Analysis)"
license = "GPL-2.0"
documentation = "https://docs.rs/panda-re-sys"
homepage = "https://panda-re.mit.edu"

[package.metadata.docs.rs]
features = ["x86_64"]

[lib]
name = "panda_sys"

[features]
libpanda = []
x86_64 = []
i386 = []
arm = []
aarch64 = []
ppc = []
mips = []
mipsel = []
mips64 = []
